--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<!-- The page supports only a dark color schemes -->
+	<meta name="color-scheme" content="dark">
+
+	<!-- Replace the Bootstrap CSS with the
+				Bootstrap-Dark Variant CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet">
+
 	<script defer src='/build/bundle.js'></script>
 </head>
 
