--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,17 @@
 	<!-- The page supports only a dark color schemes -->
 	<meta name="color-scheme" content="dark">
 
+
+
+	<script defer src='/build/bundle.js'></script>
+
 	<!-- Replace the Bootstrap CSS with the
 				Bootstrap-Dark Variant CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet">
-
-	<script defer src='/build/bundle.js'></script>
+	<link
+		rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+	/>
 </head>
 
 <body>
