--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
 	<title>Leagues Traits Calculator</title>
 
+	<meta name="description" content="Theorycraft, create, share and save your own Shattered Relics League builds with this handy tool designed for osrs. Toggle your selected relics to see what relic set bonuses you can have.">
+
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
@@ -13,14 +15,12 @@
 	<!-- The page supports only a dark color schemes -->
 	<meta name="color-scheme" content="dark">
 
-
-
 	<script defer src='/build/bundle.js'></script>
 
 	<!-- Replace the Bootstrap CSS with the
 				Bootstrap-Dark Variant CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet">
-	<link
+	<link defer href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet">
+	<link defer
 		rel="stylesheet"
 		href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
 	/>
